<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pet Paradise</string>
    <string name="title">Pet Paradise</string>
    <string name="emailAddress">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="loginAccount">Have an account? <b>Login</b></string>
    <string name="haveAccount">Don\'t have account? <b>Register</b></string>
    <string name="forgotPasswordTitle">FORGOT PASSWORD</string>
    <string name="submit">Submit</string>
    <string name="resetPassword">Enter your email address, we\'ll send you a email to reset your password.</string>
    <string name="fullName">Full Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="createAccount">Create an Account</string>
    <string name="pleaseWait">Please Wait&#8230;</string>
    <string name="profilePicture">Profile Picture</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="save">Save</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_services">Services</string>
    <string name="title_shopping">Shop by Pet</string>
    <string name="title_account">Account</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="logout">Log Out</string>
    <string name="edit">Edit</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="pet_products">Pet Products</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>